# projeto-vaga-backend

./: .dockerignore  Dockerfile  README.md  acmevita.db  docker-compose.yml  pyproject.toml
app/: app.py  database.py
app/models/: colaborador_model.py  departamento_model.py
app/routers/: departamentos.py
app/schemas/: colaborador.py  departamento.py
app/services/: departamento_service.py
scripts/: seed.py
tests/: test_app.py
